--- a/cucumber-html-reports/004_Deletar_usuario.html
+++ b/cucumber-html-reports/004_Deletar_usuario.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
           <tr class="info">
             <td>br.com.fiserv.chargeback.test.automacao</td>
                           <td>1</td>
-                        <td>25 jan 2021, 22:40</td>
+                        <td>26 jan 2021, 13:19</td>
           </tr>
         </tbody>
       </table>
@@ -132,7 +132,7 @@ $(document).ready(function() {
           <td >0</td>
           <td >0</td>
           <td class="total">3</td>
-          <td class="duration" data-value="21638261147">21s 638ms</td>
+          <td class="duration" data-value="21766225868">21s 766ms</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -197,9 +197,9 @@ $(document).ready(function() {
         
 <div class="brief passed">
   <span class="keyword indention">Quando</span>
-  <span class="name">se informa o usuário "FBCTL1F" e senha "Abapai43#"</span>
+  <span class="name">se informa o usuário "FBCTL1F" e senha "userLogin.txt"</span>
   
-  <span class="lead-duration duration">8s 267ms</span>
+  <span class="lead-duration duration">8s 344ms</span>
 
   </div>
 
@@ -220,7 +220,7 @@ $(document).ready(function() {
   <span class="keyword indention">E</span>
   <span class="name">ao informar nome do usuário "TestRobotEdition" realiza a verificação do mesmo se está cadastrado</span>
   
-  <span class="lead-duration duration">13s 369ms</span>
+  <span class="lead-duration duration">13s 420ms</span>
 
   </div>
 
@@ -280,7 +280,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
                           <span class="location name">Hooks.tearDown(Scenario)</span>
                         
-  <span class="lead-duration duration">1s 042ms</span>
+  <span class="lead-duration duration">1s 053ms</span>
 
           </div>
 
