--- a/cucumber-html-reports/classpath-features-002_cadastrar_usuario-feature.html
+++ b/cucumber-html-reports/classpath-features-002_cadastrar_usuario-feature.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
           <tr class="info">
             <td>br.com.fiserv.chargeback.test.automacao</td>
                           <td>1</td>
-                        <td>26 jan 2021, 13:19</td>
+                        <td>27 jan 2021, 11:16</td>
           </tr>
         </tbody>
       </table>
@@ -132,7 +132,7 @@ $(document).ready(function() {
           <td >0</td>
           <td >0</td>
           <td class="total">8</td>
-          <td class="duration" data-value="59173265858">59s 173ms</td>
+          <td class="duration" data-value="62649687698">1m 2s 649ms</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -210,7 +210,7 @@ $(document).ready(function() {
   <span class="keyword indention">Dado</span>
   <span class="name">eu acesso a aplicação chargeback através da url "https://racvwb1001.1dc.com/cbk-backoffice-front/"</span>
   
-  <span class="lead-duration duration">7s 747ms</span>
+  <span class="lead-duration duration">9s 820ms</span>
 
   </div>
 
@@ -281,7 +281,7 @@ $(document).ready(function() {
   <span class="keyword indention">Quando</span>
   <span class="name">se informa o usuário "FBCTL1F" e senha "userLogin.txt"</span>
   
-  <span class="lead-duration duration">8s 314ms</span>
+  <span class="lead-duration duration">8s 240ms</span>
 
   </div>
 
@@ -302,7 +302,7 @@ $(document).ready(function() {
   <span class="keyword indention">E</span>
   <span class="name">ao informar nome do usuário "TestRobot", Sobrenome "Automation", email "test.automation@test.com.br", login da rede "F3565" , perfil "Administrator"</span>
   
-  <span class="lead-duration duration">13s 407ms</span>
+  <span class="lead-duration duration">13s 184ms</span>
 
   </div>
 
@@ -323,7 +323,7 @@ $(document).ready(function() {
   <span class="keyword indention">Então</span>
   <span class="name">ao concluir o cadastor visualiza - se a seguinte mensagem  "Saved successfully!"</span>
   
-  <span class="lead-duration duration">001ms</span>
+  <span class="lead-duration duration">000ms</span>
 
   </div>
 
@@ -362,7 +362,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
                           <span class="location name">Hooks.tearDown(Scenario)</span>
                         
-  <span class="lead-duration duration">1s 309ms</span>
+  <span class="lead-duration duration">1s 063ms</span>
 
           </div>
 
@@ -435,7 +435,7 @@ $(document).ready(function() {
   <span class="keyword indention">Dado</span>
   <span class="name">eu acesso a aplicação chargeback através da url "https://racvwb1001.1dc.com/cbk-backoffice-front/"</span>
   
-  <span class="lead-duration duration">8s 005ms</span>
+  <span class="lead-duration duration">9s 878ms</span>
 
   </div>
 
@@ -506,7 +506,7 @@ $(document).ready(function() {
   <span class="keyword indention">Quando</span>
   <span class="name">se informa o usuário "FBCTL1F" e senha "userLogin.txt"</span>
   
-  <span class="lead-duration duration">8s 328ms</span>
+  <span class="lead-duration duration">8s 223ms</span>
 
   </div>
 
@@ -527,7 +527,7 @@ $(document).ready(function() {
   <span class="keyword indention">E</span>
   <span class="name">ao informar nome do usuário "TestRobot", Sobrenome "Automation", email "test.automation@test.com.br", login da rede "F3565" , perfil "Administrator"</span>
   
-  <span class="lead-duration duration">13s 368ms</span>
+  <span class="lead-duration duration">13s 300ms</span>
 
   </div>
 
@@ -587,7 +587,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
                           <span class="location name">Hooks.tearDown(Scenario)</span>
                         
-  <span class="lead-duration duration">1s 058ms</span>
+  <span class="lead-duration duration">1s 057ms</span>
 
           </div>
 
