--- a/cucumber-html-reports/feature-overview.html
+++ b/cucumber-html-reports/feature-overview.html
@@ -233,7 +233,7 @@ $(document).ready(function() {
           <tr class="info">
             <td>br.com.fiserv.chargeback.test.automacao</td>
                           <td>1</td>
-                        <td>26 jan 2021, 13:19</td>
+                        <td>27 jan 2021, 11:16</td>
           </tr>
         </tbody>
       </table>
@@ -334,7 +334,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">6</td>
-        <td class="duration" data-value="33147146872">33s 147ms</td>
+        <td class="duration" data-value="35188072790">35s 188ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
@@ -349,7 +349,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">8</td>
-        <td class="duration" data-value="59173265858">59s 173ms</td>
+        <td class="duration" data-value="62649687698">1m 2s 649ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
@@ -364,7 +364,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">5</td>
-        <td class="duration" data-value="31428509937">31s 428ms</td>
+        <td class="duration" data-value="32597560441">32s 597ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
@@ -379,7 +379,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">4</td>
-        <td class="duration" data-value="29682403804">29s 682ms</td>
+        <td class="duration" data-value="29239376960">29s 239ms</td>
         <td class="passed">Passed</td>
       </tr>
       </tbody>
@@ -396,7 +396,7 @@ $(document).ready(function() {
       <td>0</td>
       <td>0</td>
       <td>23</td>
-      <td class="duration">2m 33s 431ms</td>
+      <td class="duration">2m 39s 674ms</td>
       <td></td>
     </tr>
     <tr>
