--- a/cucumber-html-reports/classpath-features-004_deletar_usuario-feature.html
+++ b/cucumber-html-reports/classpath-features-004_deletar_usuario-feature.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
           <tr class="info">
             <td>br.com.fiserv.chargeback.test.automacao</td>
                           <td>1</td>
-                        <td>29 jan 2021, 11:19</td>
+                        <td>08 fev 2021, 14:16</td>
           </tr>
         </tbody>
       </table>
@@ -132,7 +132,7 @@ $(document).ready(function() {
           <td >0</td>
           <td >0</td>
           <td class="total">4</td>
-          <td class="duration" data-value="30936601028">30s 936ms</td>
+          <td class="duration" data-value="35550655500">35s 550ms</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -210,7 +210,7 @@ $(document).ready(function() {
   <span class="keyword indention">Dado</span>
   <span class="name">eu acesso a aplicação chargeback através da url "https://racvwb1001.1dc.com/cbk-backoffice-front/"</span>
   
-  <span class="lead-duration duration">9s 345ms</span>
+  <span class="lead-duration duration">13s 995ms</span>
 
   </div>
 
@@ -281,7 +281,7 @@ $(document).ready(function() {
   <span class="keyword indention">Quando</span>
   <span class="name">se informa o usuário "FBCTL1F" e senha "userLogin.txt"</span>
   
-  <span class="lead-duration duration">8s 241ms</span>
+  <span class="lead-duration duration">8s 240ms</span>
 
   </div>
 
@@ -302,7 +302,7 @@ $(document).ready(function() {
   <span class="keyword indention">E</span>
   <span class="name">ao informar nome do usuário "TestRobotEdition" realiza a verificação do mesmo se está cadastrado</span>
   
-  <span class="lead-duration duration">13s 348ms</span>
+  <span class="lead-duration duration">13s 313ms</span>
 
   </div>
 
@@ -362,7 +362,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
                           <span class="location name">Hooks.tearDown(Scenario)</span>
                         
-  <span class="lead-duration duration">1s 036ms</span>
+  <span class="lead-duration duration">1s 047ms</span>
 
           </div>
 
@@ -372,12 +372,12 @@ $(document).ready(function() {
           
   <div class="embeddings inner-level">
                 <div class="embedding indention">
-    <div data-toggle="collapse" data-target="#embedding_embedding_-486965602" class="collapsable-control">
+    <div data-toggle="collapse" data-target="#embedding_embedding_1244718997" class="collapsable-control">
       <a>Attachment 1 (png)</a>
-      <a href="embeddings/embedding_-486965602.png" target="_blank"><span class="download-button glyphicon glyphicon-download-alt"></span></a>
+      <a href="embeddings/embedding_1244718997.png" target="_blank"><span class="download-button glyphicon glyphicon-download-alt"></span></a>
     </div>
-    <div id="embedding_embedding_-486965602" class="collapse collapsable-detail">
-      <span class="embedding-content"><img src="embeddings/embedding_-486965602.png"></span>
+    <div id="embedding_embedding_1244718997" class="collapse collapsable-detail">
+      <span class="embedding-content"><img src="embeddings/embedding_1244718997.png"></span>
     </div>
   </div>
         </div>
