--- a/cucumber-html-reports/step-overview.html
+++ b/cucumber-html-reports/step-overview.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
           <tr class="info">
             <td>br.com.fiserv.chargeback.test.automacao</td>
                           <td>1</td>
-                        <td>29 jan 2021, 11:19</td>
+                        <td>08 fev 2021, 14:16</td>
           </tr>
         </tbody>
       </table>
@@ -114,88 +114,214 @@ $(document).ready(function() {
                           <tr>
                 <td class="location">CadastroUsuarioStep.ao_concluir_o_cadastor_visualiza_se_a_seguinte_mensagem(String)</td>
                 <td>2</td>
-                <td class="duration" data-value="1449049">001ms</td>
-                <td class="duration" data-value="724524">000ms</td>
+                <td class="duration" data-value="1341800">001ms</td>
+                <td class="duration" data-value="670900">000ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">CadastroUsuarioStep.ao_informar_nome_do_usuário_Sobrenome_email_login_da_rede_perfil(String,String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="26571844282">26s 571ms</td>
-                <td class="duration" data-value="13285922141">13s 285ms</td>
+                <td class="duration" data-value="26654694100">26s 654ms</td>
+                <td class="duration" data-value="13327347050">13s 327ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">DeletarUsuarioStep.ao_excluir_o_usuário_verifica_se_a_seguinte_mensagem(String)</td>
                 <td>1</td>
-                <td class="duration" data-value="666465">000ms</td>
-                <td class="duration" data-value="666465">000ms</td>
+                <td class="duration" data-value="627700">000ms</td>
+                <td class="duration" data-value="627700">000ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">DeletarUsuarioStep.ao_informar_nome_do_usuário_realiza_a_verificação_do_mesmo_se_está_cadastrado(String)</td>
                 <td>1</td>
-                <td class="duration" data-value="13348379744">13s 348ms</td>
-                <td class="duration" data-value="13348379744">13s 348ms</td>
+                <td class="duration" data-value="13313800100">13s 313ms</td>
+                <td class="duration" data-value="13313800100">13s 313ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
-                <td class="location">EditarUsuario.ao_editar_o_usuário_verifica_se_a_seguinte_mensagem(String)</td>
+                <td class="location">EditarUsuarioStep.ao_editar_o_usuário_verifica_se_a_seguinte_mensagem(String)</td>
                 <td>1</td>
-                <td class="duration" data-value="683207">000ms</td>
-                <td class="duration" data-value="683207">000ms</td>
+                <td class="duration" data-value="649400">000ms</td>
+                <td class="duration" data-value="649400">000ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
-                <td class="location">EditarUsuario.ao_informar_nome_do_usuário_ao_realizar_a_busca_pelo_usuario(String)</td>
+                <td class="location">EditarUsuarioStep.ao_informar_nome_do_usuário_ao_realizar_a_busca_pelo_usuario(String)</td>
                 <td>1</td>
-                <td class="duration" data-value="2170780855">2s 170ms</td>
-                <td class="duration" data-value="2170780855">2s 170ms</td>
+                <td class="duration" data-value="2157708400">2s 157ms</td>
+                <td class="duration" data-value="2157708400">2s 157ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
-                <td class="location">EditarUsuario.ao_informar_os_novos_dados_usuário_Sobrenome_email_login_da_rede_perfil(String,String,String,String,String)</td>
+                <td class="location">EditarUsuarioStep.ao_informar_os_novos_dados_usuário_Sobrenome_email_login_da_rede_perfil(String,String,String,String,String)</td>
                 <td>1</td>
-                <td class="duration" data-value="12199288168">12s 199ms</td>
-                <td class="duration" data-value="12199288168">12s 199ms</td>
+                <td class="duration" data-value="12186306500">12s 186ms</td>
+                <td class="duration" data-value="12186306500">12s 186ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String)</td>
+                <td>2</td>
+                <td class="duration" data-value="8365668600">8s 365ms</td>
+                <td class="duration" data-value="4182834300">4s 182ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="12512550600">12s 512ms</td>
+                <td class="duration" data-value="6256275300">6s 256ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="16825996900">16s 825ms</td>
+                <td class="duration" data-value="8412998450">8s 412ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="20907383300">20s 907ms</td>
+                <td class="duration" data-value="10453691650">10s 453ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="25078298600">25s 078ms</td>
+                <td class="duration" data-value="12539149300">12s 539ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="29120726300">29s 120ms</td>
+                <td class="duration" data-value="14560363150">14s 560ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="33234796500">33s 234ms</td>
+                <td class="duration" data-value="16617398250">16s 617ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="37369124200">37s 369ms</td>
+                <td class="duration" data-value="18684562100">18s 684ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="41480096200">41s 480ms</td>
+                <td class="duration" data-value="20740048100">20s 740ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="45612783900">45s 612ms</td>
+                <td class="duration" data-value="22806391950">22s 806ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="49728717000">49s 728ms</td>
+                <td class="duration" data-value="24864358500">24s 864ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String,String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="53883185400">53s 883ms</td>
+                <td class="duration" data-value="26941592700">26s 941ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String,String,String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="58013518600">58s 013ms</td>
+                <td class="duration" data-value="29006759300">29s 006ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String,String,String,String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="62174073600">1m 2s 174ms</td>
+                <td class="duration" data-value="31087036800">31s 087ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String,String,String,String,String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="66263417000">1m 6s 263ms</td>
+                <td class="duration" data-value="33131708500">33s 131ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String,String,String,String,String,String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="70358230600">1m 10s 358ms</td>
+                <td class="duration" data-value="35179115300">35s 179ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String,String,String,String,String,String,String,String)</td>
+                <td>2</td>
+                <td class="duration" data-value="74570577900">1m 14s 570ms</td>
+                <td class="duration" data-value="37285288950">37s 285ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">FiltrosVerificacaoStep.ao_retornar_na_tela_principal_da_aplicação_visualiza_se_a_quantidade_de_filtro_na_tela(String,int)</td>
+                <td>34</td>
+                <td class="duration" data-value="439021327300">7m 19s 021ms</td>
+                <td class="duration" data-value="12912391979">12s 912ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">Hooks.tearDown(Scenario)</td>
-                <td>6</td>
-                <td class="duration" data-value="6283529024">6s 283ms</td>
-                <td class="duration" data-value="1047254837">1s 047ms</td>
+                <td>40</td>
+                <td class="duration" data-value="41576538300">41s 576ms</td>
+                <td class="duration" data-value="1039413457">1s 039ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">LoginStep.eu_acesso_a_aplicação_chargeback_através_da_url(String)</td>
-                <td>6</td>
-                <td class="duration" data-value="49435360453">49s 435ms</td>
-                <td class="duration" data-value="8239226742">8s 239ms</td>
+                <td>40</td>
+                <td class="duration" data-value="563435060500">9m 23s 435ms</td>
+                <td class="duration" data-value="14085876512">14s 085ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">LoginStep.se_informa_o_usuário_e_senha(String,String)</td>
-                <td>6</td>
-                <td class="duration" data-value="49548005467">49s 548ms</td>
-                <td class="duration" data-value="8258000911">8s 258ms</td>
+                <td>40</td>
+                <td class="duration" data-value="330427214900">5m 30s 427ms</td>
+                <td class="duration" data-value="8260680372">8s 260ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">LoginStep.visualiza_se_uma_mensagem_a_tela_principal_da_Aplicação(String)</td>
                 <td>2</td>
-                <td class="duration" data-value="163207782">163ms</td>
-                <td class="duration" data-value="81603891">081ms</td>
+                <td class="duration" data-value="143288700">143ms</td>
+                <td class="duration" data-value="71644350">071ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                       </tbody>
 
           <tfoot class="total">
             <tr>
-              <td>11</td>
               <td>29</td>
-              <td class="duration">2m 39s 723ms</td>
-              <td class="duration">5s 507ms</td>
+              <td>199</td>
+              <td class="duration">35m 34s 417ms</td>
+              <td class="duration">10s 725ms</td>
               <td>Totals</td>
             </tr>
           </tfoot>
