--- a/cucumber-html-reports/003_editar_usuario.html
+++ b/cucumber-html-reports/003_editar_usuario.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
           <tr class="info">
             <td>br.com.fiserv.chargeback.test.automacao</td>
                           <td>1</td>
-                        <td>29 jan 2021, 11:19</td>
+                        <td>08 fev 2021, 14:16</td>
           </tr>
         </tbody>
       </table>
@@ -132,7 +132,7 @@ $(document).ready(function() {
           <td >0</td>
           <td >0</td>
           <td class="total">4</td>
-          <td class="duration" data-value="22628713085">22s 628ms</td>
+          <td class="duration" data-value="22573417800">22s 573ms</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -199,7 +199,7 @@ $(document).ready(function() {
   <span class="keyword indention">Quando</span>
   <span class="name">se informa o usuário "FBCTL1F" e senha "userLogin.txt"</span>
   
-  <span class="lead-duration duration">8s 257ms</span>
+  <span class="lead-duration duration">8s 228ms</span>
 
   </div>
 
@@ -220,7 +220,7 @@ $(document).ready(function() {
   <span class="keyword indention">E</span>
   <span class="name">ao informar nome do usuário "TestRobot" ao realizar a busca pelo usuario,</span>
   
-  <span class="lead-duration duration">2s 170ms</span>
+  <span class="lead-duration duration">2s 157ms</span>
 
   </div>
 
@@ -241,7 +241,7 @@ $(document).ready(function() {
   <span class="keyword indention">E</span>
   <span class="name">ao informar os novos dados: usuário "TestRobotEdition", Sobrenome "AutomationEdition", email "test.edition.automation@test.com.br", login da rede "F3565" , perfil "Assistant"</span>
   
-  <span class="lead-duration duration">12s 199ms</span>
+  <span class="lead-duration duration">12s 186ms</span>
 
   </div>
 
@@ -301,7 +301,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
                           <span class="location name">Hooks.tearDown(Scenario)</span>
                         
-  <span class="lead-duration duration">1s 041ms</span>
+  <span class="lead-duration duration">1s 049ms</span>
 
           </div>
 
@@ -311,12 +311,12 @@ $(document).ready(function() {
           
   <div class="embeddings inner-level">
                 <div class="embedding indention">
-    <div data-toggle="collapse" data-target="#embedding_embedding_-1408292017" class="collapsable-control">
+    <div data-toggle="collapse" data-target="#embedding_embedding_184104896" class="collapsable-control">
       <a>Attachment 1 (png)</a>
-      <a href="embeddings/embedding_-1408292017.png" target="_blank"><span class="download-button glyphicon glyphicon-download-alt"></span></a>
+      <a href="embeddings/embedding_184104896.png" target="_blank"><span class="download-button glyphicon glyphicon-download-alt"></span></a>
     </div>
-    <div id="embedding_embedding_-1408292017" class="collapse collapsable-detail">
-      <span class="embedding-content"><img src="embeddings/embedding_-1408292017.png"></span>
+    <div id="embedding_embedding_184104896" class="collapse collapsable-detail">
+      <span class="embedding-content"><img src="embeddings/embedding_184104896.png"></span>
     </div>
   </div>
         </div>
