--- a/cucumber-html-reports/failures-overview.html
+++ b/cucumber-html-reports/failures-overview.html
@@ -77,7 +77,7 @@ $(document).ready(function() {
           <tr class="info">
             <td>br.com.fiserv.chargeback.test.automacao</td>
                           <td>1</td>
-                        <td>29 jan 2021, 11:19</td>
+                        <td>08 fev 2021, 14:16</td>
           </tr>
         </tbody>
       </table>
