--- a/cucumber-html-reports/feature-overview.html
+++ b/cucumber-html-reports/feature-overview.html
@@ -51,7 +51,7 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                23,
+                159,
                 0,
                 0,
                 0,
@@ -94,7 +94,7 @@ $(document).ready(function() {
                         var allData = data.datasets[tooltipItem.datasetIndex].data;
                         var tooltipLabel = data.labels[tooltipItem.index];
                         var tooltipData = allData[tooltipItem.index];
-                        var tooltipPercentage = Math.round(10000 * tooltipData / 23) / 100;
+                        var tooltipPercentage = Math.round(10000 * tooltipData / 159) / 100;
                         return tooltipLabel + ': ' + tooltipData + ' (' + tooltipPercentage + '%)';
                     }
                 }
@@ -107,7 +107,7 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                6,
+                40,
                 0
             ],
             backgroundColor: [
@@ -144,7 +144,7 @@ $(document).ready(function() {
                         var allData = data.datasets[tooltipItem.datasetIndex].data;
                         var tooltipLabel = data.labels[tooltipItem.index];
                         var tooltipData = allData[tooltipItem.index];
-                        var tooltipPercentage = Math.round(10000 * tooltipData / 6) / 100;
+                        var tooltipPercentage = Math.round(10000 * tooltipData / 40) / 100;
                         return tooltipLabel + ': ' + tooltipData + ' (' + tooltipPercentage + '%)';
                     }
                 }
@@ -157,7 +157,7 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                   4,
+                   5,
                    0
                ],
                backgroundColor: [
@@ -191,7 +191,7 @@ $(document).ready(function() {
                         var allData = data.datasets[tooltipItem.datasetIndex].data;
                         var tooltipLabel = data.labels[tooltipItem.index];
                         var tooltipData = allData[tooltipItem.index];
-                        var tooltipPercentage = Math.round(10000 * tooltipData / 4) / 100;
+                        var tooltipPercentage = Math.round(10000 * tooltipData / 5) / 100;
                         return tooltipLabel + ': ' + tooltipData + ' (' + tooltipPercentage + '%)';
                     }
                 }
@@ -233,7 +233,7 @@ $(document).ready(function() {
           <tr class="info">
             <td>br.com.fiserv.chargeback.test.automacao</td>
                           <td>1</td>
-                        <td>29 jan 2021, 11:19</td>
+                        <td>08 fev 2021, 14:16</td>
           </tr>
         </tbody>
       </table>
@@ -334,7 +334,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">6</td>
-        <td class="duration" data-value="33482173951">33s 482ms</td>
+        <td class="duration" data-value="47132864800">47s 132ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
@@ -349,7 +349,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">8</td>
-        <td class="duration" data-value="58674983258">58s 674ms</td>
+        <td class="duration" data-value="71575475000">1m 11s 575ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
@@ -364,7 +364,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">5</td>
-        <td class="duration" data-value="30345907235">30s 345ms</td>
+        <td class="duration" data-value="36381272400">36s 381ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
@@ -379,24 +379,39 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">4</td>
-        <td class="duration" data-value="30936601028">30s 936ms</td>
+        <td class="duration" data-value="35550655500">35s 550ms</td>
+        <td class="passed">Passed</td>
+      </tr>
+          <tr>
+        <td class="tagname"><a href="classpath-features-005_verificacao_filtros-feature.html">005 Verificar Filtros</a></td>
+        
+        <td  class="passed"    >34</td>
+        <td >0</td>
+        <td class="total">34</td>
+        <td      class="passed"    >136</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td class="total">136</td>
+        <td class="duration" data-value="1902200896900">31m 42s 200ms</td>
         <td class="passed">Passed</td>
       </tr>
       </tbody>
 
   <tfoot class="total">
     <tr>
-      <td>4</td>
-            <td>6</td>
+      <td>5</td>
+            <td>40</td>
       <td>0</td>
-      <td>6</td>
-      <td>23</td>
-      <td>0</td>
-      <td>0</td>
+      <td>40</td>
+      <td>159</td>
       <td>0</td>
       <td>0</td>
-      <td>23</td>
-      <td class="duration">2m 33s 439ms</td>
+      <td>0</td>
+      <td>0</td>
+      <td>159</td>
+      <td class="duration">34m 52s 841ms</td>
       <td></td>
     </tr>
     <tr>
