--- a/cucumber-html-reports/tag-overview.html
+++ b/cucumber-html-reports/tag-overview.html
@@ -49,32 +49,32 @@ $(document).ready(function() {
   $(document).ready(function() {
 
     var chartData = {
-        labels: ["@001_login","@002_cadastrar_usuario","@003_editar_usuario","@004_Deletar_usuario"],
+        labels: ["@001_login","@002_cadastrar_usuario","@003_editar_usuario","@004_Deletar_usuario","@005_veirficar_filtros"],
         datasets: [
             {
                 label: 'Passed',
                 backgroundColor: "#92DD96",
-                data: [100.00, 100.00, 100.00, 100.00]
+                data: [100.00, 100.00, 100.00, 100.00, 100.00]
             },
             {
                 label: 'Failed',
                 backgroundColor: "#F2928C",
-                data: [0.00, 0.00, 0.00, 0.00]
+                data: [0.00, 0.00, 0.00, 0.00, 0.00]
             },
             {
                 label: 'Skipped',
                 backgroundColor: "#8AF",
-                data: [0.00, 0.00, 0.00, 0.00]
+                data: [0.00, 0.00, 0.00, 0.00, 0.00]
             },
             {
                 label: 'Pending',
                 backgroundColor: "#F5F28F",
-                data: [0.00, 0.00, 0.00, 0.00]
+                data: [0.00, 0.00, 0.00, 0.00, 0.00]
             },
             {
                 label: 'Undefined',
                 backgroundColor: "#F5B975",
-                data: [0.00, 0.00, 0.00, 0.00]
+                data: [0.00, 0.00, 0.00, 0.00, 0.00]
             }
         ]
     };
@@ -135,7 +135,7 @@ $(document).ready(function() {
           <tr class="info">
             <td>br.com.fiserv.chargeback.test.automacao</td>
                           <td>1</td>
-                        <td>29 jan 2021, 11:19</td>
+                        <td>08 fev 2021, 14:16</td>
           </tr>
         </tbody>
       </table>
@@ -203,7 +203,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">4</td>
-        <td class="duration" data-value="16763422196">16s 763ms</td>
+        <td class="duration" data-value="16735825500">16s 735ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
@@ -218,7 +218,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">6</td>
-        <td class="duration" data-value="43021532114">43s 021ms</td>
+        <td class="duration" data-value="43264621700">43s 264ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
@@ -233,7 +233,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">4</td>
-        <td class="duration" data-value="22628713085">22s 628ms</td>
+        <td class="duration" data-value="22573417800">22s 573ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
@@ -248,24 +248,39 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">3</td>
-        <td class="duration" data-value="21590637624">21s 590ms</td>
+        <td class="duration" data-value="21555378100">21s 555ms</td>
+        <td class="passed">Passed</td>
+      </tr>
+          <tr>
+        <td class="tagname"><a href="005_veirficar_filtros.html">@005_veirficar_filtros</a></td>
+        
+        <td  class="passed"    >34</td>
+        <td >0</td>
+        <td class="total">34</td>
+        <td      class="passed"    >102</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td class="total">102</td>
+        <td class="duration" data-value="1425276861000">23m 45s 276ms</td>
         <td class="passed">Passed</td>
       </tr>
       </tbody>
 
   <tfoot class="total">
     <tr>
-      <td>4</td>
-            <td>6</td>
+      <td>5</td>
+            <td>40</td>
       <td>0</td>
-      <td>6</td>
-      <td>17</td>
-      <td>0</td>
-      <td>0</td>
+      <td>40</td>
+      <td>119</td>
       <td>0</td>
       <td>0</td>
-      <td>17</td>
-      <td class="duration">1m 44s 004ms</td>
+      <td>0</td>
+      <td>0</td>
+      <td>119</td>
+      <td class="duration">25m 29s 406ms</td>
       <td></td>
     </tr>
     <tr>
