--- a/cucumber-html-reports/feature-overview.html
+++ b/cucumber-html-reports/feature-overview.html
@@ -51,10 +51,10 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                159,
+                193,
                 0,
-                0,
-                0,
+                2,
+                1,
                 0
             ],
             backgroundColor: [
@@ -94,7 +94,7 @@ $(document).ready(function() {
                         var allData = data.datasets[tooltipItem.datasetIndex].data;
                         var tooltipLabel = data.labels[tooltipItem.index];
                         var tooltipData = allData[tooltipItem.index];
-                        var tooltipPercentage = Math.round(10000 * tooltipData / 159) / 100;
+                        var tooltipPercentage = Math.round(10000 * tooltipData / 196) / 100;
                         return tooltipLabel + ': ' + tooltipData + ' (' + tooltipPercentage + '%)';
                     }
                 }
@@ -107,7 +107,7 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                40,
+                49,
                 0
             ],
             backgroundColor: [
@@ -144,7 +144,7 @@ $(document).ready(function() {
                         var allData = data.datasets[tooltipItem.datasetIndex].data;
                         var tooltipLabel = data.labels[tooltipItem.index];
                         var tooltipData = allData[tooltipItem.index];
-                        var tooltipPercentage = Math.round(10000 * tooltipData / 40) / 100;
+                        var tooltipPercentage = Math.round(10000 * tooltipData / 49) / 100;
                         return tooltipLabel + ': ' + tooltipData + ' (' + tooltipPercentage + '%)';
                     }
                 }
@@ -157,7 +157,7 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                   5,
+                   6,
                    0
                ],
                backgroundColor: [
@@ -191,7 +191,7 @@ $(document).ready(function() {
                         var allData = data.datasets[tooltipItem.datasetIndex].data;
                         var tooltipLabel = data.labels[tooltipItem.index];
                         var tooltipData = allData[tooltipItem.index];
-                        var tooltipPercentage = Math.round(10000 * tooltipData / 5) / 100;
+                        var tooltipPercentage = Math.round(10000 * tooltipData / 6) / 100;
                         return tooltipLabel + ': ' + tooltipData + ' (' + tooltipPercentage + '%)';
                     }
                 }
@@ -233,7 +233,7 @@ $(document).ready(function() {
           <tr class="info">
             <td>br.com.fiserv.chargeback.test.automacao</td>
                           <td>1</td>
-                        <td>12 fev 2021, 16:45</td>
+                        <td>19 fev 2021, 12:44</td>
           </tr>
         </tbody>
       </table>
@@ -334,7 +334,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">6</td>
-        <td class="duration" data-value="49730631000">49s 730ms</td>
+        <td class="duration" data-value="37786410000">37s 786ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
@@ -349,7 +349,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">8</td>
-        <td class="duration" data-value="70687542100">1m 10s 687ms</td>
+        <td class="duration" data-value="62860776700">1m 2s 860ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
@@ -364,7 +364,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">5</td>
-        <td class="duration" data-value="36691406700">36s 691ms</td>
+        <td class="duration" data-value="33011261500">33s 011ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
@@ -379,7 +379,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">4</td>
-        <td class="duration" data-value="34945609700">34s 945ms</td>
+        <td class="duration" data-value="31790069000">31s 790ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
@@ -394,24 +394,39 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">136</td>
-        <td class="duration" data-value="1944291156700">32m 24s 291ms</td>
+        <td class="duration" data-value="2133487712000">35m 33s 487ms</td>
+        <td class="passed">Passed</td>
+      </tr>
+          <tr>
+        <td class="tagname"><a href="classpath-features-006_pesquisar_dados-feature.html">006 Pesquisar dados</a></td>
+        
+        <td  class="passed"    >9</td>
+        <td >0</td>
+        <td class="total">9</td>
+        <td      class="passed"    >34</td>
+        <td >0</td>
+        <td     class="skipped"   >2</td>
+        <td     class="pending"   >1</td>
+        <td >0</td>
+        <td class="total">37</td>
+        <td class="duration" data-value="1484357625800">24m 44s 357ms</td>
         <td class="passed">Passed</td>
       </tr>
       </tbody>
 
   <tfoot class="total">
     <tr>
-      <td>5</td>
-            <td>40</td>
+      <td>6</td>
+            <td>49</td>
       <td>0</td>
-      <td>40</td>
-      <td>159</td>
+      <td>49</td>
+      <td>193</td>
       <td>0</td>
+      <td>2</td>
+      <td>1</td>
       <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>159</td>
-      <td class="duration">35m 36s 346ms</td>
+      <td>196</td>
+      <td class="duration">1h 3m 3s 293ms</td>
       <td></td>
     </tr>
     <tr>
@@ -419,10 +434,10 @@ $(document).ready(function() {
             <td>100.00%</td>
       <td>0.00%</td>
       <td></td>
-      <td>100.00%</td>
+      <td>98.47%</td>
       <td>0.00%</td>
-      <td>0.00%</td>
-      <td>0.00%</td>
+      <td>1.02%</td>
+      <td>0.51%</td>
       <td>0.00%</td>
       <td></td>
       <td></td>
