--- a/cucumber-html-reports/step-overview.html
+++ b/cucumber-html-reports/step-overview.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
           <tr class="info">
             <td>br.com.fiserv.chargeback.test.automacao</td>
                           <td>1</td>
-                        <td>12 fev 2021, 16:45</td>
+                        <td>19 fev 2021, 12:44</td>
           </tr>
         </tbody>
       </table>
@@ -114,214 +114,242 @@ $(document).ready(function() {
                           <tr>
                 <td class="location">CadastroUsuarioStep.ao_concluir_o_cadastor_visualiza_se_a_seguinte_mensagem(String)</td>
                 <td>2</td>
-                <td class="duration" data-value="1318500">001ms</td>
-                <td class="duration" data-value="659250">000ms</td>
+                <td class="duration" data-value="1367300">001ms</td>
+                <td class="duration" data-value="683650">000ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">CadastroUsuarioStep.ao_informar_nome_do_usuário_Sobrenome_email_login_da_rede_perfil(String,String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="26606306800">26s 606ms</td>
-                <td class="duration" data-value="13303153400">13s 303ms</td>
+                <td class="duration" data-value="26400704300">26s 400ms</td>
+                <td class="duration" data-value="13200352150">13s 200ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">DeletarUsuarioStep.ao_excluir_o_usuário_verifica_se_a_seguinte_mensagem(String)</td>
                 <td>1</td>
-                <td class="duration" data-value="674000">000ms</td>
-                <td class="duration" data-value="674000">000ms</td>
+                <td class="duration" data-value="705600">000ms</td>
+                <td class="duration" data-value="705600">000ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">DeletarUsuarioStep.ao_informar_nome_do_usuário_realiza_a_verificação_do_mesmo_se_está_cadastrado(String)</td>
                 <td>1</td>
-                <td class="duration" data-value="13316348000">13s 316ms</td>
-                <td class="duration" data-value="13316348000">13s 316ms</td>
+                <td class="duration" data-value="13418101000">13s 418ms</td>
+                <td class="duration" data-value="13418101000">13s 418ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">EditarUsuarioStep.ao_editar_o_usuário_verifica_se_a_seguinte_mensagem(String)</td>
                 <td>1</td>
-                <td class="duration" data-value="730800">000ms</td>
-                <td class="duration" data-value="730800">000ms</td>
+                <td class="duration" data-value="1094900">001ms</td>
+                <td class="duration" data-value="1094900">001ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">EditarUsuarioStep.ao_informar_nome_do_usuário_ao_realizar_a_busca_pelo_usuario(String)</td>
                 <td>1</td>
-                <td class="duration" data-value="2160145900">2s 160ms</td>
-                <td class="duration" data-value="2160145900">2s 160ms</td>
+                <td class="duration" data-value="2164429100">2s 164ms</td>
+                <td class="duration" data-value="2164429100">2s 164ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">EditarUsuarioStep.ao_informar_os_novos_dados_usuário_Sobrenome_email_login_da_rede_perfil(String,String,String,String,String)</td>
                 <td>1</td>
-                <td class="duration" data-value="12242393600">12s 242ms</td>
-                <td class="duration" data-value="12242393600">12s 242ms</td>
+                <td class="duration" data-value="12235413000">12s 235ms</td>
+                <td class="duration" data-value="12235413000">12s 235ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String)</td>
                 <td>2</td>
-                <td class="duration" data-value="8454504600">8s 454ms</td>
-                <td class="duration" data-value="4227252300">4s 227ms</td>
+                <td class="duration" data-value="12404458200">12s 404ms</td>
+                <td class="duration" data-value="6202229100">6s 202ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="12468724300">12s 468ms</td>
-                <td class="duration" data-value="6234362150">6s 234ms</td>
+                <td class="duration" data-value="18548039200">18s 548ms</td>
+                <td class="duration" data-value="9274019600">9s 274ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="16771685100">16s 771ms</td>
-                <td class="duration" data-value="8385842550">8s 385ms</td>
+                <td class="duration" data-value="24870071900">24s 870ms</td>
+                <td class="duration" data-value="12435035950">12s 435ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="20932373700">20s 932ms</td>
-                <td class="duration" data-value="10466186850">10s 466ms</td>
+                <td class="duration" data-value="30949992700">30s 949ms</td>
+                <td class="duration" data-value="15474996350">15s 474ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="25100249500">25s 100ms</td>
-                <td class="duration" data-value="12550124750">12s 550ms</td>
+                <td class="duration" data-value="37376612300">37s 376ms</td>
+                <td class="duration" data-value="18688306150">18s 688ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="29216293200">29s 216ms</td>
-                <td class="duration" data-value="14608146600">14s 608ms</td>
+                <td class="duration" data-value="43267172300">43s 267ms</td>
+                <td class="duration" data-value="21633586150">21s 633ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="33400112100">33s 400ms</td>
-                <td class="duration" data-value="16700056050">16s 700ms</td>
+                <td class="duration" data-value="49429000300">49s 429ms</td>
+                <td class="duration" data-value="24714500150">24s 714ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="37543886800">37s 543ms</td>
-                <td class="duration" data-value="18771943400">18s 771ms</td>
+                <td class="duration" data-value="55661749300">55s 661ms</td>
+                <td class="duration" data-value="27830874650">27s 830ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="41699532600">41s 699ms</td>
-                <td class="duration" data-value="20849766300">20s 849ms</td>
+                <td class="duration" data-value="61843157700">1m 1s 843ms</td>
+                <td class="duration" data-value="30921578850">30s 921ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="45824834900">45s 824ms</td>
-                <td class="duration" data-value="22912417450">22s 912ms</td>
+                <td class="duration" data-value="67881712700">1m 7s 881ms</td>
+                <td class="duration" data-value="33940856350">33s 940ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="49886356500">49s 886ms</td>
-                <td class="duration" data-value="24943178250">24s 943ms</td>
+                <td class="duration" data-value="74006313500">1m 14s 006ms</td>
+                <td class="duration" data-value="37003156750">37s 003ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="54224362300">54s 224ms</td>
-                <td class="duration" data-value="27112181150">27s 112ms</td>
+                <td class="duration" data-value="80162624400">1m 20s 162ms</td>
+                <td class="duration" data-value="40081312200">40s 081ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="58156949600">58s 156ms</td>
-                <td class="duration" data-value="29078474800">29s 078ms</td>
+                <td class="duration" data-value="86320627100">1m 26s 320ms</td>
+                <td class="duration" data-value="43160313550">43s 160ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String,String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="62348828400">1m 2s 348ms</td>
-                <td class="duration" data-value="31174414200">31s 174ms</td>
+                <td class="duration" data-value="92448562200">1m 32s 448ms</td>
+                <td class="duration" data-value="46224281100">46s 224ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String,String,String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="66595775100">1m 6s 595ms</td>
-                <td class="duration" data-value="33297887550">33s 297ms</td>
+                <td class="duration" data-value="98680499100">1m 38s 680ms</td>
+                <td class="duration" data-value="49340249550">49s 340ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String,String,String,String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="70720889800">1m 10s 720ms</td>
-                <td class="duration" data-value="35360444900">35s 360ms</td>
+                <td class="duration" data-value="104938570300">1m 44s 938ms</td>
+                <td class="duration" data-value="52469285150">52s 469ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_escolher_a_quantidade_de_filtros(String,String,String,String,String,String,String,String,String,String,String,String,String,String,String,String,String)</td>
                 <td>2</td>
-                <td class="duration" data-value="74847707000">1m 14s 847ms</td>
-                <td class="duration" data-value="37423853500">37s 423ms</td>
+                <td class="duration" data-value="110874235700">1m 50s 874ms</td>
+                <td class="duration" data-value="55437117850">55s 437ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">FiltrosVerificacaoStep.ao_retornar_na_tela_principal_da_aplicação_visualiza_se_a_quantidade_de_filtro_na_tela(String,int)</td>
                 <td>34</td>
-                <td class="duration" data-value="457760295100">7m 37s 760ms</td>
-                <td class="duration" data-value="13463538091">13s 463ms</td>
+                <td class="duration" data-value="443468657500">7m 23s 468ms</td>
+                <td class="duration" data-value="13043195808">13s 043ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">Hooks.tearDown(Scenario)</td>
-                <td>40</td>
-                <td class="duration" data-value="42022149500">42s 022ms</td>
-                <td class="duration" data-value="1050553737">1s 050ms</td>
+                <td>49</td>
+                <td class="duration" data-value="51660490600">51s 660ms</td>
+                <td class="duration" data-value="1054295726">1s 054ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">LoginStep.eu_acesso_a_aplicação_chargeback_através_da_url(String)</td>
-                <td>40</td>
-                <td class="duration" data-value="586063426100">9m 46s 063ms</td>
-                <td class="duration" data-value="14651585652">14s 651ms</td>
+                <td>49</td>
+                <td class="duration" data-value="536460897400">8m 56s 460ms</td>
+                <td class="duration" data-value="10948181579">10s 948ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">LoginStep.se_informa_o_usuário_e_senha(String,String)</td>
-                <td>40</td>
-                <td class="duration" data-value="329879830000">5m 29s 879ms</td>
-                <td class="duration" data-value="8246995750">8s 246ms</td>
+                <td>49</td>
+                <td class="duration" data-value="404304150600">6m 44s 304ms</td>
+                <td class="duration" data-value="8251105114">8s 251ms</td>
                 <td class="passed">100.00%</td>
               </tr>
                           <tr>
                 <td class="location">LoginStep.visualiza_se_uma_mensagem_a_tela_principal_da_Aplicação(String)</td>
                 <td>2</td>
-                <td class="duration" data-value="121811900">121ms</td>
-                <td class="duration" data-value="60905950">060ms</td>
+                <td class="duration" data-value="121675900">121ms</td>
+                <td class="duration" data-value="60837950">060ms</td>
                 <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">PesquisarDadosStep.a_opção_para_realizar_a_busca_dos_dados(String)</td>
+                <td>1</td>
+                <td class="duration" data-value="1038300">001ms</td>
+                <td class="duration" data-value="1038300">001ms</td>
+                <td class="failed">0.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">PesquisarDadosStep.ao_informar_o_nome_do_filtro_desejado(String)</td>
+                <td>1</td>
+                <td class="duration" data-value="5580600">005ms</td>
+                <td class="duration" data-value="5580600">005ms</td>
+                <td class="failed">0.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">PesquisarDadosStep.ao_informar_o_nome_do_filtro_desejado_e_o_argumento_da_busca(String,String)</td>
+                <td>8</td>
+                <td class="duration" data-value="1295039852100">21m 35s 039ms</td>
+                <td class="duration" data-value="161879981512">2m 41s 879ms</td>
+                <td class="passed">100.00%</td>
+              </tr>
+                          <tr>
+                <td class="location">PesquisarDadosStep.verifica_se_a_quantidade_dos_registros_baixados_no_arquivo_excell_é_igual_a_quantidade_de_registros_na_tela(String)</td>
+                <td>9</td>
+                <td class="duration" data-value="6788500">006ms</td>
+                <td class="duration" data-value="754277">000ms</td>
+                <td class="failed">88.89%</td>
               </tr>
                       </tbody>
 
           <tfoot class="total">
             <tr>
-              <td>29</td>
-              <td>199</td>
-              <td class="duration">36m 18s 368ms</td>
-              <td class="duration">10s 946ms</td>
+              <td>33</td>
+              <td>245</td>
+              <td class="duration">1h 3m 54s 954ms</td>
+              <td class="duration">15s 652ms</td>
               <td>Totals</td>
             </tr>
           </tfoot>
