--- a/cucumber-html-reports/feature-overview.html
+++ b/cucumber-html-reports/feature-overview.html
@@ -51,9 +51,9 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                782,
-                3,
-                1,
+                746,
+                14,
+                26,
                 0,
                 0
             ],
@@ -107,8 +107,8 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                164,
-                3
+                153,
+                14
             ],
             backgroundColor: [
                 "#00B000",
@@ -157,8 +157,8 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                   4,
-                   2
+                   5,
+                   1
                ],
                backgroundColor: [
                 "#00B000",
@@ -233,7 +233,7 @@ $(document).ready(function() {
           <tr class="info">
             <td>br.com.fiserv.chargeback.test.automacao</td>
                           <td>1</td>
-                        <td>24 fev 2021, 06:03</td>
+                        <td>24 fev 2021, 16:23</td>
           </tr>
         </tbody>
       </table>
@@ -334,23 +334,23 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">6</td>
-        <td class="duration" data-value="47042614101">47s 042ms</td>
+        <td class="duration" data-value="42000902400">42s</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
         <td class="tagname"><a href="classpath-features-002_cadastrar_usuario-feature.html">002 Cadastrar</a></td>
         
-        <td  class="passed"    >1</td>
-        <td  class="failed"    >1</td>
+        <td  class="passed"    >2</td>
+        <td >0</td>
         <td class="total">2</td>
-        <td      class="passed"    >6</td>
-        <td      class="failed"    >1</td>
-        <td     class="skipped"   >1</td>
+        <td      class="passed"    >8</td>
+        <td >0</td>
+        <td >0</td>
         <td >0</td>
         <td >0</td>
         <td class="total">8</td>
-        <td class="duration" data-value="59483191898">59s 483ms</td>
-        <td class="failed">Failed</td>
+        <td class="duration" data-value="69626237400">1m 9s 626ms</td>
+        <td class="passed">Passed</td>
       </tr>
           <tr>
         <td class="tagname"><a href="classpath-features-003_editar_usuario-feature.html">003 Editar Usuário</a></td>
@@ -364,7 +364,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">5</td>
-        <td class="duration" data-value="33271782702">33s 271ms</td>
+        <td class="duration" data-value="38747302900">38s 747ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
@@ -379,7 +379,7 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">4</td>
-        <td class="duration" data-value="32303010698">32s 303ms</td>
+        <td class="duration" data-value="33062746500">33s 062ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
@@ -394,22 +394,22 @@ $(document).ready(function() {
         <td >0</td>
         <td >0</td>
         <td class="total">136</td>
-        <td class="duration" data-value="2362544110803">39m 22s 544ms</td>
+        <td class="duration" data-value="2442688617500">40m 42s 688ms</td>
         <td class="passed">Passed</td>
       </tr>
           <tr>
         <td class="tagname"><a href="classpath-features-006_pesquisar_dados-feature.html">006 Pesquisar dados</a></td>
         
-        <td  class="passed"    >125</td>
-        <td  class="failed"    >2</td>
+        <td  class="passed"    >113</td>
+        <td  class="failed"    >14</td>
         <td class="total">127</td>
-        <td      class="passed"    >625</td>
-        <td      class="failed"    >2</td>
-        <td >0</td>
+        <td      class="passed"    >587</td>
+        <td      class="failed"    >14</td>
+        <td     class="skipped"   >26</td>
         <td >0</td>
         <td >0</td>
         <td class="total">627</td>
-        <td class="duration" data-value="19165180911800">5h 19m 25s 180ms</td>
+        <td class="duration" data-value="17781455001700">4h 56m 21s 455ms</td>
         <td class="failed">Failed</td>
       </tr>
       </tbody>
@@ -417,31 +417,31 @@ $(document).ready(function() {
   <tfoot class="total">
     <tr>
       <td>6</td>
-            <td>164</td>
-      <td>3</td>
+            <td>153</td>
+      <td>14</td>
       <td>167</td>
-      <td>782</td>
-      <td>3</td>
-      <td>1</td>
+      <td>746</td>
+      <td>14</td>
+      <td>26</td>
       <td>0</td>
       <td>0</td>
       <td>786</td>
-      <td class="duration">6h 1m 39s 825ms</td>
+      <td class="duration">5h 40m 7s 580ms</td>
       <td></td>
     </tr>
     <tr>
       <td></td>
-            <td>98.20%</td>
-      <td>1.80%</td>
+            <td>91.62%</td>
+      <td>8.38%</td>
       <td></td>
-      <td>99.49%</td>
-      <td>0.38%</td>
-      <td>0.13%</td>
+      <td>94.91%</td>
+      <td>1.78%</td>
+      <td>3.31%</td>
       <td>0.00%</td>
       <td>0.00%</td>
       <td></td>
       <td></td>
-      <td>1.80%</td>
+      <td>8.38%</td>
     </tr>
   </tfoot>
 </table>
