--- a/cucumber-html-reports/classpath-features-001_login-feature.html
+++ b/cucumber-html-reports/classpath-features-001_login-feature.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
           <tr class="info">
             <td>br.com.fiserv.chargeback.test.automacao</td>
                           <td>1</td>
-                        <td>24 fev 2021, 06:03</td>
+                        <td>24 fev 2021, 16:23</td>
           </tr>
         </tbody>
       </table>
@@ -132,7 +132,7 @@ $(document).ready(function() {
           <td >0</td>
           <td >0</td>
           <td class="total">6</td>
-          <td class="duration" data-value="47042614101">47s 042ms</td>
+          <td class="duration" data-value="42000902400">42s</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -210,7 +210,7 @@ $(document).ready(function() {
   <span class="keyword indention">Dado</span>
   <span class="name">eu acesso a aplicação chargeback através da url "https://racvwb1001.1dc.com/cbk-backoffice-front/"</span>
   
-  <span class="lead-duration duration">20s 572ms</span>
+  <span class="lead-duration duration">13s 574ms</span>
 
   </div>
 
@@ -281,7 +281,7 @@ $(document).ready(function() {
   <span class="keyword indention">Quando</span>
   <span class="name">se informa o usuário "FBCTL1F" e senha "userLogin.txt"</span>
   
-  <span class="lead-duration duration">8s 263ms</span>
+  <span class="lead-duration duration">8s 238ms</span>
 
   </div>
 
@@ -302,7 +302,7 @@ $(document).ready(function() {
   <span class="keyword indention">Então</span>
   <span class="name">visualiza - se uma mensagem a tela principal da Aplicação "Administration arrow_drop_down"</span>
   
-  <span class="lead-duration duration">056ms</span>
+  <span class="lead-duration duration">060ms</span>
 
   </div>
 
@@ -341,7 +341,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
                           <span class="location name">Hooks.tearDown(Scenario)</span>
                         
-  <span class="lead-duration duration">1s 057ms</span>
+  <span class="lead-duration duration">1s 114ms</span>
 
           </div>
 
@@ -414,7 +414,7 @@ $(document).ready(function() {
   <span class="keyword indention">Dado</span>
   <span class="name">eu acesso a aplicação chargeback através da url "https://racvwb1001.1dc.com/cbk-backoffice-front/"</span>
   
-  <span class="lead-duration duration">9s 853ms</span>
+  <span class="lead-duration duration">11s 761ms</span>
 
   </div>
 
@@ -485,7 +485,7 @@ $(document).ready(function() {
   <span class="keyword indention">Quando</span>
   <span class="name">se informa o usuário "AleSantos" e senha "userLogin.txt"</span>
   
-  <span class="lead-duration duration">8s 241ms</span>
+  <span class="lead-duration duration">8s 298ms</span>
 
   </div>
 
@@ -506,7 +506,7 @@ $(document).ready(function() {
   <span class="keyword indention">Então</span>
   <span class="name">visualiza - se uma mensagem a tela principal da Aplicação "User not authorized to access the portal."</span>
   
-  <span class="lead-duration duration">055ms</span>
+  <span class="lead-duration duration">067ms</span>
 
   </div>
 
@@ -545,7 +545,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
                           <span class="location name">Hooks.tearDown(Scenario)</span>
                         
-  <span class="lead-duration duration">1s 048ms</span>
+  <span class="lead-duration duration">1s 043ms</span>
 
           </div>
 
